Fix payments tab only looking up payments for the current application version (#505)